first live test commit

--- a/krogersst-jekyll-site/_includes/head.html
+++ b/krogersst-jekyll-site/_includes/head.html
@@ -12,13 +12,12 @@
   <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Mr+Dafoe" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
   <!-- jQuery library (served from Google) -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <!-- Slider Javascript file -->
-  <script src="{{ "/assets/slider/slippry-1.4.0/dist/slippry.min.js" | relative_url }}"></script>
-  <!-- Slider CSS file -->
-  <link href="{{ "/assets/slider/slippry-1.4.0/dist/slippry.css" | relative_url }}" rel="stylesheet" />
+  <script src="{{ "/assets/sticky-header/sticky-header.js" | relative_url }}"></script>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
