--- a/krogersst-jekyll-site/_includes/header.html
+++ b/krogersst-jekyll-site/_includes/header.html
@@ -1,9 +1,19 @@
+<script> {% include stickyheader.js %} </script>
 <header class="site-header" role="banner">
 
   <div id="nav-header">
 
     <div class="site-title">
-        <a href="{{ "/" | relative_url}}">Kelsey M Rogers</a>
+        <a href="{{ "/" | relative_url }}">kelsey rogers</a>
+        <div>writer. designer. storyteller.</div>
+    </div>
+
+    <div class="nav-links">
+      <a href="{{ "/#portfolio" | relative_url }}">portfolio</a>
+      <div> / </div>
+      <a href="{{ "/about.md" | relative_url }}">about</a>
+      <div> / </div>
+      <a href="{{ "/#contact" | relative_url }}">contact</a>
     </div>
 
   </div>
