--- a/krogersst-jekyll-site/_layouts/home.html
+++ b/krogersst-jekyll-site/_layouts/home.html
@@ -2,7 +2,118 @@
 layout: default
 ---
 <div class="home-story">
-  <div class="home-wrap">
+    <div class="home-wrap">
+        <div class="intro-box">
+            <div class="home-ribbon">
+                <div class="home-title">
+                    writer. designer. storyteller.
+                </div>
+                <div class="home-desc">
+                  Hi! I'm Kelsey Rogers. I love to tell stories. Let me help you tell yours.
+                </div>
+            </div>
+        </div>
 
-</div>
+        <div class="portfolio-box">
+
+            <div id="design" class="portfolio section">
+                <h1>design</h1>
+
+                <div class="flex">
+
+                    <div id="tutorial" class="writing">
+                        <div class="example">
+                            <div class="example-pic"></div>
+                            <div class="example-text">
+                                <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-22-wordpress-plugin-tutorial %}"><span>Database Wordpress Plugin Tutorial</span></a>
+                                <div class="link-sub"><span>How to create an interactive database and visualization tool for Wordpress.</span></div>
+                                <p>Suspendisse sodales sapien a enim iaculis, quis eleifend tortor varius. Vivamus eu tortor et neque placerat gravida. Morbi volutpat feugiat sodales. Quisque vitae scelerisque nibh. Ut id ante non sapien vestibulum sollicitudin. Donec tincidunt, orci ut porttitor commodo, metus mi viverra justo, gravida tempus arcu velit vel lorem. Morbi mollis ante vitae nisi lacinia, id facilisis mauris consequat. Cras lorem mauris, feugiat a luctus in, tinciduntac nisi. Proin ut rhoncus urna, et tempor turpis. Ut aliquam iaculis mi eget feugiat. Integer sed accumsan sapien. Suspendisse sodales sapien a enim iaculis, quis eleifend tortor varius. Vivamus eu tortor et neque placerat gravida. Morbi volutpat feugiat sodales. Quisque vitae scelerisque nibh. Ut id ante non sapien vestibulum sollicitudin.
+                                </p>
+                                <div class="read-more"><a href="http://visualizingabolition.org/">Read More...</a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="visual_ab" class="writing">
+                        <div class="example">
+                            <div class="example-pic"></div>
+                            <div class="example-text">
+                                <a class="link-header" href="http://visualizingabolition.org/"><span>Visualizing Abolition: A Digital History of the Supression of the African Slave Trade</span></a>
+                                <div class="link-sub"><span>A digital humanities project funded through the University of Missouri Honors College.</span></div>
+                                <p>Visualizing Abolition maps the suppression of the African slave trade by tracing nearly 31,000 records of correspondence exchanged between the British Foreign Office and British commissioners, ministers, naval officers,
+                                    and representatives of foreign governments around the world over the course of the nineteenth century. It provides users with three resources. First, a database that lists the names of the senders, recipients, places
+                                    of origin and destination, dates, as well as the subject of the letters when available. Second, essays exploring different topics related to the suppression of the traffic. Finally, a gallery of images that provides
+                                    visual context for the information available on the website. These resources allow students and researchers to further understand the history of the suppression of the African slave trade and expand our knowledge of
+                                    the largest coerced migration in history.
+                                </p>
+                                <div class="read-more"><a href="http://visualizingabolition.org/">Read More...</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="writing" class="portfolio section">
+                    <h1>writing</h1>
+
+                    <div class="flex">
+                        <div id="holiday" class="writing">
+                            <div class="example">
+                                <div class="example-pic"></div>
+                                <div class="example-text">
+                                    <a class="link-header" href="https://artifactsjournal.missouri.edu/2017/05/christmas-holiday-queering-family-in-20th-century-southern-missouri/"><span>Christmas Holiday: Queering Family in 20th Century Southern Missouri</span></a>
+                                    <div class="link-sub"><span>Published in Artifacts: A Journal of Undergraduate Writing Issue 15, Spring 2017.</span></div>
+                                    <p>An obituary in The Southeast Missourian lists Elaine “Tommie” Davis as the business partner of Mary Jane “Miss Jane” Barnett for over forty years (Elaine Davis Obituary). However, the family albums of the two tell a
+                                        richer story, they were life partners as well as business partners, a radical act in mid-century America, and perhaps even a dangerous one in Southern Missouri. Their life together in Cape Girardeau, Missouri was
+                                        recorded by over six hundred photographs, letters, and hours of home video. Out of these materials housed in the State Historical Society of Missouri in Cape Girardeau, the photographs of their personal lives are
+                                        of particular interest. The family snapshot represents and reinforces particular narratives of what a family should look like, and how it should function. This is further emphasized in Christmas family snapshots.
+                                        Thus, the family snapshots of Barnett and Davis, and in particular, ‘Christmas Holiday’, implicitly challenge the very culture that their lives were no doubt steeped in. The family album thus becomes a resistive
+                                        force, whether consciously or unconsciously, against the pervasive heteronormativity and homophobia of both the time and place.
+                                    </p>
+                                    <div class="read-more"><a href="https://artifactsjournal.missouri.edu/2017/05/christmas-holiday-queering-family-in-20th-century-southern-missouri/">Read More...</a></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="encounters" class="writing">
+                            <div class="example">
+                                <a href="https://www.flickr.com/photos/internetarchivebookimages/14780464664/">
+                                    <div class="example-pic"></div>
+                                </a>
+                                <div class="example-text">
+                                    <a class="link-header" href="{{ site.baseurl }}{% post_url 2017-07-23-close-encounters %}"><span>Close Encounters With Legend: The Ultimate Legend Trip</span></a>
+                                    <div class="link-sub"><span>Presented at the Missouri Folklore Conference Spring 2015</span></div>
+                                    <p>Legend tripping and ostensive action are important ways in which people interact and transform legends, especially extraterrestrial experience legends. Stephen Spielberg’s Close Encounters of the Third Kind engages
+                                        these legends at every level of ostensive action, transforming itself into both the representative of and instigator of the legend trip. Just as Linda Dégh’s holiday of Halloween “…is based on legends, communicates
+                                        legends, and creates legends,” so too is Close Encounters of the Third Kind. This film takes extraterrestrial experience, and its associated ostensive actions, and organizes them in a satisfying narrative that encourages
+                                        the viewer to interact with the legend complex, even after leaving the theater. This takes the form of legend tripping, which unlike Bill Ellis’ brand of legend tripping, is a type that is engaged more by adults
+                                        than by adolescents. The film encourages legend tripping not only through onscreen representations of extraterrestrial experiences, but also by creating a narrative foundation that relies heavily on legend tripping
+                                        to drive the plot. This is seen through its presentation of ‘a close encounter of the fifth kind’ as the longed for and final evolution of the legend trip. It also creates within Western popular culture a new location
+                                        to visit in a real life legend trip. By incorporating the extraterrestrial experience legend complex into all levels of the film, Close Encounters of the Third Kind creates and celebrates the ultimate legend trip.
+                                    </p>
+                                    <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2017-07-23-close-encounters %}">Read More...</a></div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div id="contact" class="section">
+          <h1>contact</h1>
+          <div id="contactbox">
+          <div class="contact-desc">if you're interested in my work, shoot me a message!</div>
+          <form id="contactform" action="//formspree.io/krogerst.st@gmail.com" method="POST">
+            <input type="text" class="formbox" name="name" placeholder="Name">
+            <input type="email" class="formbox" name="_replyto" placeholder="Email">
+            <textarea name="message" placeholder="Message"></textarea>
+            <input type="submit" value="Send">
+          </form>
+        </div>
+        </div>
+
+    </div>
 </div>
