--- a/krogersst-jekyll-site/_sass/kmr/_layout.scss
+++ b/krogersst-jekyll-site/_sass/kmr/_layout.scss
@@ -1,7 +1,7 @@
 /**
  * Page content
  */
- 
+
 .page-heading {
   font-size: 20px;
 }
@@ -30,16 +30,70 @@
 }
 
 .post-title {
+  display: none;
+  margin-top: 20px;
   font-size: 42px;
   letter-spacing: -1px;
   line-height: 1;
 }
 
+.post-body {
+  display: flex;
+  justify-content: center;
+}
+.post-photos {
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .post-image {
+    background-position: center top;
+    width: 200px;
+    height: 400px;
+    border-top-left-radius: 200px;
+    border-bottom-left-radius: 200px;
+    margin-bottom: 20px;
+  }
+}
+
+.right-sidebar {
+  margin-left: 10px;
+  min-width: 210px;
+}
+
 .post-content {
-  margin-bottom: $spacing-unit;
+  width: 50%;
+  margin-bottom: 20px;
+
+  video {
+    display: block;
+    margin: {
+      left: auto;
+      right: auto;
+      bottom: 10px;
+      top: 10px;
+    }
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  p {
+    margin-top: 10px;
+    font-size: 15px;
+  }
+
+  blockquote {
+
+  }
 
   h2 {
     font-size: 32px;
+    color: white;
+    background: black;
+    font-family: $Abel;
+    padding-left: 5px;
   }
 
   h3 {
@@ -47,6 +101,14 @@
   }
 
   h4 {
+    padding-left: 5px;
+    margin-top: 15px;
     font-size: 20px;
+    color: white;
+    background: black;
+    font-family: $Abel;
+  }
+  .footnotes {
+    padding-left: 15px;
   }
 }
