live test corrections

--- a/krogersst-jekyll-site/_includes/header.html
+++ b/krogersst-jekyll-site/_includes/header.html
@@ -11,7 +11,7 @@
     <div class="nav-links">
       <a href="{{ "/#portfolio" | relative_url }}">portfolio</a>
       <div> / </div>
-      <a href="{{ "/about.md" | relative_url }}">about</a>
+      <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
       <a href="{{ "/#contact" | relative_url }}">contact</a>
     </div>
