--- a/krogersst-jekyll-site/_layouts/home.html
+++ b/krogersst-jekyll-site/_layouts/home.html
@@ -27,9 +27,8 @@ layout: default
                             <div class="example-text">
                                 <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-22-wordpress-plugin-tutorial %}"><span>Database Wordpress Plugin Tutorial</span></a>
                                 <div class="link-sub"><span>How to create an interactive database and visualization tool for Wordpress.</span></div>
-                                <p>Suspendisse sodales sapien a enim iaculis, quis eleifend tortor varius. Vivamus eu tortor et neque placerat gravida. Morbi volutpat feugiat sodales. Quisque vitae scelerisque nibh. Ut id ante non sapien vestibulum sollicitudin. Donec tincidunt, orci ut porttitor commodo, metus mi viverra justo, gravida tempus arcu velit vel lorem. Morbi mollis ante vitae nisi lacinia, id facilisis mauris consequat. Cras lorem mauris, feugiat a luctus in, tinciduntac nisi. Proin ut rhoncus urna, et tempor turpis. Ut aliquam iaculis mi eget feugiat. Integer sed accumsan sapien. Suspendisse sodales sapien a enim iaculis, quis eleifend tortor varius. Vivamus eu tortor et neque placerat gravida. Morbi volutpat feugiat sodales. Quisque vitae scelerisque nibh. Ut id ante non sapien vestibulum sollicitudin.
-                                </p>
-                                <div class="read-more"><a href="http://visualizingabolition.org/">Read More...</a></div>
+                                <p>This tutorial is currently under construction. It will be a part of a digital humanities workshop with Rice University in early April 2018.</p>                                </p>
+                                <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-22-wordpress-plugin-tutorial %}">Read More...</a></div>
                             </div>
                         </div>
                     </div>
