--- a/krogersst-jekyll-site/_sass/kmr.scss
+++ b/krogersst-jekyll-site/_sass/kmr.scss
@@ -8,6 +8,7 @@ $background-color: white;
 $header-color: #97ead2;
 $text-accent: white;
 $link-color: black;
+$code-color: #f1efef;
 
 
 // default fonts
@@ -31,6 +32,7 @@ $wrap-mini: 75%;
   "kmr/layout",
   "kmr/header",
   "kmr/base",
+  "kmr/contact",
   "kmr/footer",
   "kmr/home"
 ;
