--- a/krogersst-jekyll-site/_sass/kmr/_base.scss
+++ b/krogersst-jekyll-site/_sass/kmr/_base.scss
@@ -3,7 +3,7 @@
  */
 body, h1, h2, h3, h4, h5, h6,
 p, pre, hr,
-dl, dd, ol, ul, figure {
+dl, dd, figure {
   margin: 0;
   padding: 0;
 }
@@ -18,6 +18,11 @@ body {
   background-color: $background-color;
 }
 
+code {
+  background-color: #f1efef;
+  margin: 1px;
+}
+
 /**
  * Links
  */
@@ -27,6 +32,72 @@ a {
 
   &:hover {
     text-decoration: underline;
+  }
+}
+
+/**
+* Lists
+*/
+
+ol {
+  margin-left: 10px;
+}
+
+ul {
+  margin-left: 10px;
+  margin-top: 10px;
+  -webkit-margin-before: 10px;
+}
+
+li {
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+/**
+* Tables
+*/
+
+table {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-collapse: collapse;
+  background-color: $code-color;
+}
+
+table, th, td {
+  padding: 5px;
+}
+
+ th, td {
+  border-left: 2px solid black;
+  padding-left: 10px;
+  &:first-child {
+    border-left: 0px;
+    padding-left: 5px;
+  }
+}
+
+td {
+  border-top: 2px solid black;
+}
+
+tbody {
+  tr:nth-child(odd) {
+    background-color: darken($code-color, 5);
+  }
+}
+
+/**
+* Blockquote
+*/
+
+blockquote {
+  background-color: lighten($color-main, 15);
+  padding-left: 5px;
+  p {
+    padding: 5px;
+    font-style: italic;
   }
 }
 
