--- a/krogersst-jekyll-site/_layouts/home.html
+++ b/krogersst-jekyll-site/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
             </div>
         </div>
 
-        <div class="portfolio-box">
+        <div id="portfolio" class="portfolio-box">
 
             <div id="design" class="portfolio section">
                 <h1>design</h1>
@@ -25,10 +25,10 @@ layout: default
                         <div class="example">
                             <div class="example-pic"></div>
                             <div class="example-text">
-                                <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-22-wordpress-plugin-tutorial %}"><span>Database Wordpress Plugin Tutorial</span></a>
-                                <div class="link-sub"><span>How to create an interactive database and visualization tool for Wordpress.</span></div>
-                                <p>This tutorial is currently under construction. It will be a part of a digital humanities workshop with Rice University in early April 2018.</p>                                </p>
-                                <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-22-wordpress-plugin-tutorial %}">Read More...</a></div>
+                                <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-24-digital-humanities-website %}"><span>So You Want to Make a Digital Humanities Website</span></a>
+                                <div class="link-sub"><span>A Tutorial Series For Planning and Designing a DH Website </span></div>
+                                <p>This tutorial is currently under construction. It will be a part of a digital humanities workshop with Rice University in early April 2018. Before you even dive into the fun stuff like coding and designing the visuals of a digital humanities website, understanding what you want out of your website comes first. It will help limit the problems that inevitably pop up along the way. Here are important questions that you should answer before attempting a project like this.</p>
+                                <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-24-digital-humanities-website %}">Read More...</a></div>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,23 @@ layout: default
 
         </div>
 
-        <div id="contact" class="section">
+        <div id="blog" class="section">
+          <h1>blog</h1>
+          <div class="flex-blog">
+            {% for post in site.categories.tutorial %}
+            <div class="blog-ex">
+              <div class="blog-img" style="background-image:url({{ site.baseurl }}/assets/{{ post.postimage }})";/></div>
+              <div><a href="{{ post.url }}"><span>{{ post.title }}</span>
+              <span>{{ post.subtitle }}</span></a>
+              <p>{{post.excerpt}}</p>
+              <div class="read-more-blog"><a href="{{ post.url }}"><span>Read More...</span></a></div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+
+        <div id="contact">
           <h1>contact</h1>
           <div id="contactbox">
           <div class="contact-desc">if you're interested in my work, shoot me a message!</div>
@@ -114,5 +130,5 @@ layout: default
         </div>
         </div>
 
-    </div>
+
 </div>
