images folder added and another scss test

--- a/krogersst-jekyll-site/_layouts/post.html
+++ b/krogersst-jekyll-site/_layouts/post.html
@@ -7,19 +7,19 @@ layout: default
 
   <div class="post-photos">
     <a href="{{ page.leftsourceone }}">
-      <div class="post-image" style="background-image: url('{{ site.url }}/assets/{{ page.leftimageone }}');"></div>
+      <div class="post-image" style="background-image: url('{{ site.url }}/assets/images/{{ page.leftimageone }}');"></div>
     </a>
     <a href="{{ page.leftsourcetwo }}">
-      <div class="post-image" style="background-image: url('{{ site.url }}/assets/{{ page.leftimagetwo }}');"></div>
+      <div class="post-image" style="background-image: url('{{ site.url }}/assets/images/{{ page.leftimagetwo }}');"></div>
     </a>
     <a href="{{ page.leftsourcethree }}">
-      <div class="post-image" style="background-image: url('{{ site.url }}/assets/{{ page.leftimagethree }}');"></div>
+      <div class="post-image" style="background-image: url('{{ site.url }}/assets/images/{{ page.leftimagethree }}');"></div>
     </a>
     <a href="{{ page.leftsourcefour }}">
-      <div class="post-image" style="background-image: url('{{ site.url }}/assets/{{ page.leftimagefour }}');"></div>
+      <div class="post-image" style="background-image: url('{{ site.url }}/assets/images/{{ page.leftimagefour }}');"></div>
     </a>
     <a href="{{ page.leftsourcefive }}">
-      <div class="post-image" style="background-image: url('{{ site.url }}/assets/{{ page.leftimagefive }}'); margin-bottom:{{ page.lastimagemargin}};"></div>
+      <div class="post-image" style="background-image: url('{{ site.url }}/assets/images/{{ page.leftimagefive }}'); margin-bottom:{{ page.lastimagemargin}};"></div>
     </a>
   </div>
 
