--- a/krogersst-jekyll-site/_layouts/home.html
+++ b/krogersst-jekyll-site/_layouts/home.html
@@ -106,7 +106,7 @@ layout: default
           <div class="flex-blog">
             {% for post in site.categories.tutorial %}
             <div class="blog-ex">
-              <div class="blog-img" style="background-image:url({{ site.baseurl }}/assets/{{ post.postimage }})";/></div>
+              <div class="blog-img" style="background-image:url({{ site.baseurl }}/assets/images/{{ post.postimage }})";/></div>
               <div><a href="{{ post.url }}"><span>{{ post.title }}</span>
               <span>{{ post.subtitle }}</span></a>
               <p>{{post.excerpt}}</p>
