--- a/krogersst-jekyll-site/_sass/kmr/_contact.scss
+++ b/krogersst-jekyll-site/_sass/kmr/_contact.scss
@@ -6,7 +6,7 @@
   margin-top: 20px;
 }
 #contact {
-  background-image: url("griffin-asset.png");
+  background-image: url("assets/images/griffin-asset.png");
   background-size: 500px;
   min-height: 350px;
   background-repeat: no-repeat;
