create seperate build repository to incorporate jekyll plugins

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,11 @@
     </div>
 
     <div class="nav-links">
-      <a href="{{ "/#portfolio" | relative_url }}">portfolio</a>
+      <a href="{{ "/blog" | relative_url }}">blog</a>
       <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
-      <a href="{{ "/#contact" | relative_url }}">contact</a>
+      <a href="{{ "/contact/" | relative_url }}">contact</a>
     </div>
 
   </div>
