--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -204,6 +204,7 @@
     }
 
     .flex-blog {
+      max-height: 500px;
       margin-top: 10px;
       display: flex;
       flex-wrap: wrap;
@@ -222,11 +223,20 @@
         min-width: 100px;
         min-height: 100px;
       }
-      p {
-          overflow: hidden;
-          margin-top: 5px;
-          font-size: 15px;
+      .blog-title {
+        font-weight: bold;
       }
+      .blog-subtitle {
+        font-style: italic;
+      }
+      .blog-info {
+        max-height: 400px;
+          p {
+            overflow: hidden;
+            margin-top: 2px;
+            font-size: 15px;
+          }
+        }
 
       .read-more-blog {
           margin-top: 5px;
