--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <header>
+    <h1>{{ page.title | escape }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="page-content">
     {{ content }}
   </div>
+
+  {% include contact.html %}
 
 </article>
