--- a/_sass/kmr/_layout.scss
+++ b/_sass/kmr/_layout.scss
@@ -2,6 +2,12 @@
  * Page content
  */
 
+.page {
+   width: $wrap-mini;
+   margin: auto;
+   margin-top: 20px;
+ }
+
 .page-heading {
   font-size: 20px;
 }
@@ -105,10 +111,15 @@
   h4 {
     padding-left: 5px;
     margin-top: 15px;
-    font-size: 20px;
+    font-size: 22px;
     color: white;
     background: black;
     font-family: $Abel;
+  }
+  h5 {
+    font-size: 20px;
+    font-family: $Abel;
+    margin-top: 10px;
   }
   .footnotes {
     padding-left: 15px;
